# ClashOfClans

./: .editorconfig  CMakeLists.txt  README.md
Classes/: AppDelegate.cpp
Classes/AppDelegate/: AppDelegate.cpp
Classes/Component/: DefenseBuildingAnimation.cpp  DefenseBuildingAnimation.h  HealthBarComponent.cpp  HealthBarComponent.h
Classes/Controller/: BUILDING_MOVE_FIX.md  BUILDING_MOVE_GUIDE.md  BattleProcessController.cpp  BattleProcessController.h  BattleRecorder.cpp  BattleRecorder.h  BuildingController.cpp  BuildingController.h  BuildingPlacementController.cpp  InputController.cpp  InputController.h  InputController_BuildingMove.cpp  MoveBuildingController.cpp  MoveBuildingController.h  MoveMapController.cpp  MoveMapController.h  REFACTORING_SUMMARY.md  ResourceController.cpp  ResourceController.h  TOUCH_DRAG_FIX.md  UpgradeController.cpp  UpgradeController.h
Classes/Layer/: BattleHUDLayer.cpp  BattleHUDLayer.h  BattleMapLayer.cpp  BattleMapLayer.h  BattleResultLayer.cpp  BattleResultLayer.h  BattleTroopLayer.cpp  BattleTroopLayer.h  DebugLayer.cpp  DebugLayer.h  HUDLayer.cpp  HUDLayer.h  ShopLayer.cpp  ShopLayer.h  ThemeSwitchLayer.cpp  ThemeSwitchLayer.h  TrainingLayer.cpp  TrainingLayer.h  VillageLayer.cpp  VillageLayer.h
Classes/Manager/: AnimationManager.cpp  AudioManager.cpp  AudioManager.h  BuildingManager.cpp  BuildingManager.h  BuildingSpeedupManager.cpp  BuildingSpeedupManager.h  BuildingUpgradeManager.cpp  BuildingUpgradeManager.h  ResourceManager.cpp  ResourceManager.h  SaveManager.cpp  SaveManager.h  VillageDataManager.cpp  VillageDataManager.h
Classes/Model/: Building.cpp  Building.h  BuildingConfig.cpp  BuildingConfig.h  BuildingRequirements.cpp  BuildingRequirements.h  PlayerData.cpp  PlayerData.h  ResourceProducer.cpp  TroopConfig.cpp  VillageData.h
Classes/Scene/: BattleScene.cpp  BattleScene.h  StartupScene.cpp  StartupScene.h  VillageScene.cpp  VillageScene.h
Classes/Sprite/: BattleUnitSprite.cpp  BattleUnitSprite.h  BuildingSprite.cpp  BuildingSprite.h
Classes/System/: GridMap.cpp  GridMap.h  ResourceConfig.cpp  ResourceConfig.h
Classes/UI/: PlacementConfirmUI.cpp  ResourceCollectionUI.cpp  ResourceCollectionUI.h
Classes/Util/: DebugHelper.cpp  DebugHelper.h  FindPathUtil.cpp  FindPathUtil.h  GridMapUtils.cpp  GridMapUtils.h  RandomBattleMapGenerator.cpp
Classes/View/: BuildingSprite.cpp  BuildingSprite.h
Resources/Animation/defence_architecture/cannon/: atlas.plist
engine/cocos/core/: cocos2d.vcxproj  cocos2d.vcxproj.filters
proj.android/: settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle
proj.android/app/res/values/: strings.xml
proj.ios_mac/ClashOfClans.xcodeproj/: project.pbxproj
proj.ios_mac/ios/: Info.plist
proj.ios_mac/mac/: Info.plist
proj.win32/: Constants.h  GameMain.cpp
